[package]
name = "parsing"
version = "0.1.0"
authors = ["hehaowen00"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.bench]
codegen-units = 1
lto = "fat"

[profile.dev]
codegen-units = 1
lto = "fat"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.test]
codegen-units = 1
lto = "fat"

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "http"
harness = false

[[bench]]
name = "simd_http"
harness = false
